--- a/src/components/search-box/search-box.styles.css
+++ b/src/components/search-box/search-box.styles.css
@@ -1,4 +1,4 @@
-/* .search {
+.search {
   -webkit-appearance: none;
   border: none;
   outline: none;
@@ -7,4 +7,4 @@
   line-height: 30px;
   margin-bottom: 30px;
 
-} */
+}
